--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
   "name": "tensorflow-helpers",
   "version": "0.0.0",
-  "main": "index.js",
+  "description": "",
+  "keywords": [],
+  "author": "",
+  "license": "BSD-2-Clause",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beenotung/tensorflow-helpers.git"
+  },
+  "homepage": "https://github.com/beenotung/tensorflow-helpers#readme",
+  "bugs": {
+    "url": "https://github.com/beenotung/tensorflow-helpers/issues"
+  },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "tsc --noEmit",
     "clean": "rimraf dist",
-    "build": "rimraf dist && tsc -p . && rimraf dist/tsconfig.tsbuildinfo",
+    "build": "rimraf dist && tsc -p . && rimraf dist/*.{tsbuildinfo,test.d.ts,test.js}",
     "tsc": "tsc -p ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "@tensorflow/tfjs-node": "^4.20.0"
+  },
   "devDependencies": {
     "@types/node": "^22.1.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/beenotung/tensorflow-helpers.git"
-  },
-  "bugs": {
-    "url": "https://github.com/beenotung/tensorflow-helpers/issues"
-  },
-  "homepage": "https://github.com/beenotung/tensorflow-helpers#readme",
-  "dependencies": {
-    "@tensorflow/tfjs-node": "^4.20.0"
   }
 }
