--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
   "name": "tensorflow-helpers",
   "version": "0.0.0",
-  "description": "",
-  "keywords": [],
+  "description": "Helper functions to use tensorflow in nodejs",
+  "keywords": [
+    "tensorflow",
+    "tfjs",
+    "typescript",
+    "helpers",
+    "utility",
+    "image",
+    "embedding",
+    "classifier",
+    "neural-network",
+    "transfer-learning",
+    "deep-learning",
+    "feature-extraction"
+  ],
   "author": "",
   "license": "BSD-2-Clause",
   "repository": {
