--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tensorflow-helpers",
   "version": "0.1.2",
-  "description": "Helper functions to use tensorflow in nodejs",
+  "description": "Helper functions to use tensorflow in nodejs for transfer learning, image classification, and more",
   "keywords": [
     "tensorflow",
     "tfjs",
