--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "tsc --noEmit",
     "clean": "rimraf dist",
