--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "dist"
   ],
   "scripts": {
+    "dev": "npm run bundle -- --watch",
+    "bundle": "esbuild browser.test.ts --bundle --outfile=bundle.js",
     "test": "tsc --noEmit",
     "clean": "rimraf dist",
     "build": "rimraf dist && tsc -p . && rimraf dist/*.{tsbuildinfo,test.d.ts,test.js}",
@@ -39,10 +41,11 @@
   },
   "dependencies": {
     "@beenotung/tslib": "^24.0.0",
-    "@tensorflow/tfjs-node": "^4.20.0"
+    "@tensorflow/tfjs": "^4.21.0",
+    "@tensorflow/tfjs-node": "^4.21.0"
   },
   "peerDependencies": {
-    "@tensorflow/tfjs-core": "^4.20.0"
+    "@tensorflow/tfjs-core": "^4.21.0"
   },
   "peerDependenciesMeta": {
     "@tensorflow/tfjs-core": {
@@ -50,8 +53,9 @@
     }
   },
   "devDependencies": {
-    "@tensorflow/tfjs-core": "^4.20.0",
+    "@tensorflow/tfjs-core": "^4.21.0",
     "@types/node": "^22.5.0",
+    "esbuild": "^0.24.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
