--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bundle": "esbuild browser.test.ts --bundle --outfile=bundle.js",
     "test": "tsc --noEmit",
     "clean": "rimraf dist",
-    "build": "rimraf dist && tsc -p . && rimraf dist/*.{tsbuildinfo,test.d.ts,test.js}",
+    "build": "rimraf dist && tsc -p . && rimraf dist/*.{tsbuildinfo,test.d.ts,test.js} && mk-package",
     "tsc": "tsc -p ."
   },
   "dependencies": {
@@ -56,6 +56,7 @@
     "@tensorflow/tfjs-core": "^4.21.0",
     "@types/node": "^22.5.0",
     "esbuild": "^0.24.0",
+    "mk-package": "^1.0.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
