--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Helper functions to use tensorflow in nodejs for transfer learning, image classification, and more",
   "keywords": [
     "tensorflow",
+    "tensorflowjs",
     "tfjs",
     "typescript",
     "helpers",
