--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "dependencies": {
     "@beenotung/tslib": "^24.0.0",
     "@tensorflow/tfjs": "^4.21.0",
-    "@tensorflow/tfjs-node": "^4.21.0"
+    "@tensorflow/tfjs-node": "^4.21.0",
+    "sharp": "^0.33.5"
   },
   "peerDependencies": {
     "@tensorflow/tfjs-core": "^4.21.0"
