--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tensorflow-helpers",
-  "version": "1.3.1",
+  "version": "1.3.1-cpu",
   "description": "Helper functions to use tensorflow in nodejs for transfer learning, image classification, and more",
   "keywords": [
     "tensorflow",
