--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "scripts": {
     "dev": "npm run bundle -- --watch",
+    "exp": "esbuild bounding-box/app.ts --bundle --outfile=bounding-box/bundle.js --watch",
     "bundle": "esbuild browser.test.ts --bundle --outfile=bundle.js",
     "test": "tsc --noEmit",
     "clean": "rimraf dist",
@@ -43,6 +44,7 @@
   "dependencies": {
     "@beenotung/tslib": "^24.6.2",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-layers": "^4.22.0",
     "@tensorflow/tfjs-node": "^4.22.0"
   },
   "peerDependencies": {
