--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@beenotung/tslib": "^24.6.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-layers": "^4.22.0",
-    "@tensorflow/tfjs-node": "^4.22.0"
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "sharp": "^0.34.3"
   },
   "peerDependencies": {
     "@tensorflow/tfjs": "^4.22.0",
